--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,350 @@
+:root {
+  --sidebar-flex: 1.5;
+  --condiv-flex: 6;
+  --fontsize-p: 1.2rem;
+  --fontsize-nav: 1.6rem;
+  --typing-font: 3rem;
+}
+
+@import url(http://fonts.googleapis.com/css?family=Tangerine);
+
+
+/* @import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
+$main-green: #79dd09 !default;
+$main-green-rgb-015: rgba(121, 221, 9, 0.1) !default;
+$main-yellow: #bdbb49 !default;
+$main-yellow-rgb-015: rgba(189, 187, 73, 0.1) !default;
+$main-red: #bd150b !default;
+$main-red-rgb-015: rgba(189, 21, 11, 0.1) !default;
+$main-blue: #0076bd !default;
+$main-blue-rgb-015: rgba(0, 118, 189, 0.1) !default; */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  /* display: flex; */
+  width: 100vw;
   min-height: 100vh;
+  /* flex-direction: column;
+  align-items: stretch; */
+}
+
+header {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2.5rem;
+  background: #333;
+}
+
+header h1 {
+  color: #fff;
+}
+
+.tippy-pos {
+  background-color: rgb(10, 223, 10);
+}
+.map {
+  height: '100vh';
+  /* width: '80%'; */
+  width: 100%;
+  /* border: 20px solid #ffb5b5bd; */
+  /* padding: inherit; */
+  margin: 0;
+}
+
+.map header {
+  background-repeat: repeat-x;
+  border-bottom: 1px solid #d4d4d4;
+  -webkit-box-shadow: 0 1px 4px rgb(0 0 0 / 7%);
+  box-shadow: 0 1px 4px rgb(0 0 0 / 7%);
+  background-image: linear-gradient(to bottom, #ffffff 0%, #f2f2f2 100%);
+}
+
+.map header h3 {
+  display: block;
+  font-size: 16px;
+  font-family: 'Times New Roman';
+  font-weight: bold;
+  padding: 10px;
+}
+
+.tweet-post {
+  /* display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 10px; */
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    justify-content: space-around;
+}
+
+.style-post {
+  padding: 10px;
+    margin: 10px;
+    width: -webkit-fill-available;
+    height: -webkit-fill-available;
+}
+
+.tippy-tooltip.green-theme {
+  background-color: #29fa15;
+  color: rgb(10, 10, 10);
+}
+
+.tippy-tooltip.yellow-theme {
+  background-color: rgb(216, 250, 21);
+  color: rgb(10, 10, 10);
+}
+
+nav {
+  background: #333;
+}
+nav ul {
+  /* font-size: var(--fontsize-nav); */
+  text-align: center;
+  list-style: none;
+}
+
+nav ul li {
+  /* margin: 20px;
+  display: inline-flex; */
+  /* margin: 0px;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end; */
+  margin: 0px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 20px;
+}
+nav ul h2 {
+  margin: 20px;
+  display: inline-flex;
+  color: #fff;
+  text-decoration: none;
+}
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.tweet {
+  background-color: #3db6ff;
+  border: none;
+  border-radius: 11px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  position: absolute;
+  top: 130px;
+  left: 10px;
+}
+
+.slide {
+  font-family: 'sans-serif';
+  /* padding: '15px'; */
+}
+
+.text-primary {
+  --bs-text-opacity: 1;
+  margin: 10px;
+  color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
+}
+
+.box p {
+  color: var(--grayishBlue);
+}
+
+.box {
+  border-radius: 5px;
+  box-shadow: 0px 30px 40px -20px var(--grayishBlue);
+  padding: 20px;
+  margin: 10px;
+  background-color: white;
+  position: absolute;
+  top: 100px;
+  right: 0px;
+}
+.cyan {
+  padding: 15px;
+  margin: 5px;
+  border: solid 1px brown;
+  border-radius: 5px;
+}
+h2 {
+  color: var(--varyDarkBlue);
+  font-weight: var(--weight3);
+}
+
+.box-shop {
+  border-radius: 5px;
+  box-shadow: 0px 30px 40px -20px var(--grayishBlue);
+  /* padding: 20px; */
+  margin: 10px;
+  background-color: white;
+  position: absolute;
+  top: 200px;
+  right: 0px;
+}
+
+.box-name {
+   padding: 15px;
+  /* margin: 5px; */
+  border: solid 1px brown;
+  border-radius: 5px;
+}
+
+.name {
+  font-size: medium;
+}
+
+.coffee {
+  color: #d6852e;
+}
+
+.coffee-pos {
+  color: #00da78;
+}
+
+.bi-geo-alt-fill::before {
+  content: '\f3c7';
+  font-size: larger;
+}
+
+.infoWindowStyle {
+  position: absolute;
+  font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  transform: translate3d(-50%, -100%, 0);
+  backdrop-filter: blur(1px);
+  background-color: rgb(0 0 0 / 21%);
+  /* background-color: transparent; */
+  /* background-color: white; */
+  border-radius: 8px;
+  padding: 12px;
+  box-shadow: 0 2px 7px 1px rgb(0 0 0 / 30%);
+  width: max-content;
+}
+
+.info-name {
+  font-size: 16px;
+  color: #ffffff;
+  text-shadow: rgb(173 173 173) 0.1em 0.1em 0.2em;
+  font-family: Roboto, Arial;
+  font-size: 13px;
+}
+
+.info-detail {
+  font-size: 13px;
+  color: #ffffff;
+  text-shadow: rgb(173, 173, 173) 0.1em 0.1em 0.2em;
+  font-family: Roboto, Arial;
+  font-size: 13px;
+}
+
+.info-detail p {
+  font-size: 10px;
+  color: #ffffff;
+  text-shadow: rgb(173, 173, 173) 0.1em 0.1em 0.2em;
+  font-family: Roboto, Arial;
+  font-size: 13px;
+}
+
+.condiv {
+  padding: 30px;
+  background-color: #f4f5f9;
+  flex: var(--condiv-flex);
+}
+
+.home {
+  display: flex;
+  padding: initial;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #dbcca9;
+  /* background-color: #fbffd7; */
+  /* background-image: url('../src/img/top-view-bowls-with-coffee-beans-powder.jpg'); */
 }
 
-.App-link {
-  color: #61dafb;
+.profilepic {
+  border-radius: 50%;
+  width: 400px;
+  margin: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.social {
+  position: absolute;
+  margin-top: 20px;
+  display: flex;
+  bottom: 60px;
+}
+.social i {
+  padding-right: 30px;
+  font-size: 25px;
+  color: #9a9b9c;
+}
+.social i:hover {
+  color: #333;
+}
+
+.typingeffect {
+  font-size: var(--typing-font);
+  margin-bottom: 30px;
+}
+
+.about {
+  text-align: center;
+}
+.subtopic {
+  margin: 10px 10px 30px 10px !important;
+}
+h1,
+h2,
+h3,
+h4 {
+  /* margin: 10px; */
+}
+p {
+  font-size: var(--fontsize-p);
+}
+
+.widecard {
+  display: flex;
+  margin: 30px 0px 30px 0px;
+  transition: 0.3s;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+.widecard:hover {
+  color: #fff;
+  background: #333;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+}
+
+.skills ul {
+  display: flex;
+  background-color: #333;
+  color: #fff;
+  border-radius: 10px;
+}
+.skills ul li {
+  list-style: none;
+  margin: 30px;
+}
+
+.active {
+  font-weight: bolder;
 }
